--- a/public/css/index.css
+++ b/public/css/index.css
@@ -276,3 +276,10 @@ a[href].header-anchor:focus,
 h2 + .header-anchor {
 	font-size: 1.5em;
 }
+
+img {
+	max-width: 300px;
+	height: auto;
+	display: block;
+
+}
