--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -40,7 +40,7 @@
 
 
 		<header>
-		<a href="/" class="home-link"><img src="img/logo-icon.png" alt="Cherry Love logo icon" id="logo" /> <span>{{ metadata.title }}</span></a>
+		<a href="/" class="home-link"><img src="img/logo.png" alt="Cherry Love logo icon" id="logo" /> <span>{{ metadata.title }}</span></a>
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
