--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,7 +6,7 @@
 		<title>{{ title or metadata.title }}</title>
 		<meta name="description" content="{{ description or metadata.description }}">
 		<meta name="author" content="{{ author or metadata.author.name }}">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.ico" />
 
 		{#- Atom and JSON feeds included by default #}
 		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
@@ -40,8 +40,10 @@
 
 
 		<header>
-		<a href="/" class="home-link"><img src="img/logo-icon.png" alt="Cherry Love logo icon" id="logo" /> <span>{{ metadata.title }}</span></a>
+		<a href="/" class="home-link"><img src="{{ metadata.logo }}" alt="Cherry Love logo icon" id="logo" /> <span>{{ metadata.title }}</span></a>
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
+
+
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
@@ -50,6 +52,7 @@
 				{%- endfor %}
 				</ul>
 			</nav>
+
 		</header>
 
 		<main id="skip">
