added bootstrap css, header and footer, custom css, home page info

--- a/content/index.njk
+++ b/content/index.njk
@@ -5,8 +5,145 @@ eleventyNavigation:
   order: 1
 numberOfLatestPostsToShow: 3
 ---
-Hello! On my first 11ty based blog!
-During the BootCamp of Web Developing with "The Coders Guild" we learn a lot of new features. Eleventy is one of them!
+
+ <section tabindex="1" id="bio" class="container container-lg-fluid p-4 mb-4 rounded border-1">
+            <h3 class="fs-3  fw-bold px-5 text-uppercase rounded-end">bio</h3>
+            <div class="clearfix text-light fs-5 px-2">
+
+              <figure id="photo" class="d-flex flex-column flex-wrap p-3 border badge col-md-3 float-md-end mb-3 ms-md-3">
+                <img  src="../img/IMG_8331.JPG" alt="Liubov Vyshneva's photo" class="w-100"/>
+                <figcaption class="p-2 fs-6 text-center">Liubov Vyshneva<br/>@CherryLove</figcaption>
+               </figure>
+              <p class="p-2">
+                As a highly motivated individual with a strong desire to succeed
+                in the IT industry, I am eager to start my career in the UK. My
+                passion for technology and problem-solving drives me to
+                continuously learn and grow in this field.
+                </p>
+                <p class="p-2">
+                While I have some prior professional experience in IT, I am
+                transitioning from content creation to more of a development
+                focus. I am building a solid understanding of the latest
+                technologies and trends and I am confident that my strong work
+                ethic, attention to detail, and quick learning abilities will make
+                me a valuable asset to any team.
+                </p>
+                <p class="p-2">
+                I am excited to bring my enthusiasm and fresh perspective to a new
+                challenge and contribute to the success of your organization.
+                </p>
+            </div>
+
+
+          </section>
+          <section  tabindex="2" id="skills" class="container container-lg-fluid p-4 mb-4 rounded border-1">
+            <h3 class="fs-3  fw-bold px-5 text-uppercase rounded-end">skills</h3>
+            <div class="p-3 text-light">
+                <ul>
+                    <li>
+                      Logic, imagination, accuracy, attentiveness, patience,
+                      perseverance.
+                    </li>
+                    <li>
+                      Five years’ experience in Web Development industry as a content
+                      manager, using HTML, CSS, WordPress, Git
+                    </li>
+                    <li>
+                      Confident using MS Office, Corel Draw, Adobe
+                      Photoshop
+                    </li>
+                    <li>Graphic design experience</li>
+                  </ul>
+
+            </div>
+            </section>
+
+          <section id="technologes" class="container container-lg-fluid p-4 mb-4 rounded border-1">
+            <h3 class="fs-3  fw-bold px-5 text-uppercase rounded-end">TECHNOLOGIES</h3>
+            <div class="row p-3 d-flex flex-row justify-content-lg-start text-light flex-wrap">
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">HTML</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">CSS</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">Git</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">JavaScript (essential)</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">PHP (essential)</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">SQL (essential)</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">WordPress</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">MS Office</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">Corel Draw</span>
+             <span class="d-inline-block border rounded-1 fs-6 w-auto m-1">Adobe Photoshop</span>
+
+
+
+            </div>
+
+            </section>
+
+          <section  tabindex="3" id="portfolio" class="container container-lg-fluid p-4 mb-4 rounded border-1">
+            <h3 class="fs-3  fw-bold px-5 text-uppercase rounded-end">portfolio</h3>
+            <div class="d-flex flex-row justify-content-around flex-wrap">
+                <div class="card mb-3" style="width: 18rem;">
+                    <img src="../img/aloe-swirl.png"
+                    alt="Aloe swirl jigsaw 1000 pieses solved"
+                     class="card-img-top" >
+                    <div class="card-body">
+                      <h5 class="card-title">I love jigsaws</h5>
+                      <p class="card-text">A sample of my attentiveness, patience, perseverance.</p>
+                    </div>
+                  </div>
+
+                  <div class="card mb-3" style="width: 18rem;">
+                    <img  class="card-img-top" src="../img/Hungry-Caterpillar.png"
+                    alt="screenshot of Hungry caterpillar game">
+                    <div class="card-body">
+                      <h5 class="card-title">Game using Processing.js</h5>
+                      <p class="card-text">Project after course "Intro to JS: drawing & animation" on <a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a>
+                        .</p>
+                      <a class="card-link"
+                      href="https://www.khanacademy.org/computer-programming/hungry-caterpillar-by-cherrylove/4670408561573888"
+                      target="_blank"
+                      >To see the code or to try the game tap here</a>
+                    </div>
+                  </div>
+
+                  <div class="card mb-3" style="width: 18rem;">
+                    <img  class="card-img-top" src="../img/sinoptik-site.png"
+                    alt="sinoptik rock band website">
+                    <div class="card-body">
+                      <h5 class="card-title">SINOPTIK - music band webpage </h5>
+                      <p class="card-text">Task: Create a semantic HTML layout to advertise a band.</p>
+                      <a class="card-link"
+                      href="https://cherry-love.github.io/sinoptik/"
+                      target="_blank"
+                      >Go to SINOPTIK webpage</a>
+                    </div>
+                  </div>
+
+                  <div class="card mb-3" style="width: 18rem;">
+                    <img  class="card-img-top" src="../img/coffee-pp.png"
+                    alt="coffee product page website">
+                    <div class="card-body">
+                      <h5 class="card-title">Cofee Landing</h5>
+                      <p class="card-text">Task: Build a Product Landing Page.</p>
+                      <a class="card-link"
+                      href="https://cherry-love.github.io/coffee/"
+                      target="_blank"
+                      >Go to the Project page</a>
+                    </div>
+                  </div>
+
+
+
+            </div>
+
+
+          </section>
+
+					 <section  tabindex="6" id="latestPosts" class="container container-lg-fluid p-4 mb-4 rounded border-1">
+            <h3 class="fs-3  fw-bold px-5 text-uppercase rounded-end">Latest Posts</h3>
+            <div class="d-flex flex-column justify-content-around flex-wrap">
+						<p>Hello! On my first 11ty based blog!</p>
+						<p>During the BootCamp of Web Developing with "The Coders Guild" we learn a lot of new features. Eleventy is one of them!</p>
+
 
 
 {% set postsCount = collections.posts | length %}
@@ -30,3 +167,6 @@ During the BootCamp of Web Developing with "The Coders Guild" we learn a lot of 
 	{%- endfor %}
 </ul>
 #}
+						</div>
+					</section>
+
