--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,12 +10,16 @@
 	--color-gray-50: #C0C0C0;
 	--color-gray-90: #333;
 
-	--background-color: #fff;
+	--background-color: rgb(16,31,70, 0.9);
 
-	--text-color: var(--color-gray-90);
-	--text-color-link: #082840;
-	--text-color-link-active: #5f2b48;
-	--text-color-link-visited: #17050F;
+	--text-color: #042E5D;
+	--text-color-link: var(--primary-color) ;
+	--text-color-link-active: #d0ede3;
+	--text-color-link-visited: var(--primary-color);
+
+	--primary-color: #75CEB1;
+	--secondary-color: #005F40;
+	--secondary-dark-color: #001F15;
 
 	--syntax-tab-size: 2;
 }
@@ -27,6 +31,7 @@
 		--color-gray-90: #dad8d8;
 
 		/* --text-color is assigned to --color-gray-_ above */
+
 		--text-color-link: #1493fb;
 		--text-color-link-active: #6969f7;
 		--text-color-link-visited: #a6a6f8;
@@ -48,14 +53,12 @@ body {
 	font-family: var(--font-family);
 	color: var(--text-color);
 	background-color: var(--background-color);
+	background-image: url(../img/bg-sakura-sq3.png);
+	font-family: Helvetica, sans-serif;
 }
 html {
 	overflow-y: scroll;
 }
-body {
-	max-width: 60em;
-}
-
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
 .visually-hidden {
 	clip: rect(0 0 0 0);
@@ -167,12 +170,7 @@ header {
 	align-items: center;
 
 }
-#logo {
-	border: 1px solid #75ceb1;
-	border-radius: 50%;
-	width: 30px;
-	margin-right: 10px;
-}
+
 .home-link:link:not(:hover) {
 	text-decoration: none;
 }
@@ -219,7 +217,7 @@ header {
 .postlist-date,
 .postlist-item:before {
 	font-size: 0.8125em; /* 13px /16 */
-	color: var(--color-gray-90);
+	color: var(--color-gray-20);
 }
 .postlist-date {
 	word-spacing: -0.5px;
@@ -293,3 +291,82 @@ img {
 	display: block;
 
 }
+
+
+
+/* Cherry Love custom css */
+#wrapper {
+	overflow-wrap: break-word;
+	margin: 0 auto;
+}
+
+#logo {
+	border: 1px solid var(--primary-color);
+	border-radius: 50%;
+	width: 30px;
+	margin-right: 10px;
+}
+header {
+	width: 100%;
+	background: #042E5D;
+	border-radius: 0 0 10px 10px;
+}
+header #logo {
+	width: 50px;
+	height: 50px;
+}
+.navbar .nav-item a.nav-link, #socials a i {
+	color: var(--primary-color) !important;
+}
+.navbar .nav-item a.nav-link:hover, #socials a i:hover {
+	color: #d0ede3 !important;
+}
+
+h1 {
+	color: var(--primary-color);
+	text-shadow: 1px 2px 5px  rgba(0,0,0,0.7);
+}
+h3 {
+	background-color: var(--primary-color);
+	color: var(--text-color);
+	width: fit-content;
+	min-width: 30%;
+	margin-left: -1.5rem;
+}
+.card {
+	color: var(--text-color);
+	border: 2px solid #22aa7e;
+	background: #AFF0DB;
+}
+.card a, .card a.card-link {
+	color: var(--secondary-color);
+}
+.card a:hover, .card a.card-link:hover,
+.card a:active, .card a.card-link:active  {
+	color: var(--secondary-dark-color);
+	text-decoration: none;
+}
+
+#photo {
+	color: var(--primary-color);
+}
+#photo img {
+	max-width: 280px;
+	height: auto;
+}
+section {
+	background-color: var(--background-color);
+	border: 1px solid var(--primary-color);
+	color: #eee;
+}
+
+footer {
+	text-align: center;
+	color: #75ceb1;
+	background: rgb(0, 31,21, 0.7);
+	padding: 10px 20px;
+	margin: 10px 0;
+	font-size: 0.8em;
+	border: 2px solid #22aa7e;
+}
+
