--- a/public/css/index.css
+++ b/public/css/index.css
@@ -51,7 +51,7 @@ body {
 	padding: 0;
 	margin: 0 auto;
 	font-family: var(--font-family);
-	color: var(--text-color);
+	color: var(--color-gray-20);
 	background-color: var(--background-color);
 	background-image: url(../img/bg-sakura-sq3.png);
 	font-family: Helvetica, sans-serif;
