fix header, add bootstrap js for toggler menu

--- a/_includes/layouts/header.njk
+++ b/_includes/layouts/header.njk
@@ -1,9 +1,9 @@
-<header class="container-fluid p-3 px-md-5 shadow-lg d-flex flex-row">
+<header class="container-fluid p-3 px-md-5 shadow-lg">
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 
 
-        <div class="flex-grow-1 align-self-center">
+        <div class=" d-flex flex-row align-self-center">
 					<a href="/" class="home-link"><img src="{{ metadata.logo }}" alt="Cherry Love logo icon" id="logo" /> </a>
           <h1 class="fs-2 fw-bold text-wrap mb-0 ms-3">{{ metadata.title }}</h1>
         </div>
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
             <ul class="nav navbar-nav me-auto mb-2 mb-lg-0 text-capitalize">
-              
+
 
               <!--li class="nav-item">
                 <a class="nav-link" href="#contacts">contacts</a>
