--- a/public/css/index.css
+++ b/public/css/index.css
@@ -303,18 +303,17 @@ img {
 #logo {
 	border: 1px solid var(--primary-color);
 	border-radius: 50%;
-	width: 30px;
+	width: 35px;
 	margin-right: 10px;
+	background-color: var(--text-color-link-active);
+	text-shadow: 1px 2px 5px  rgba(0,0,0,0.7);
 }
 header {
 	width: 100%;
 	background: #042E5D;
 	border-radius: 0 0 10px 10px;
 }
-header #logo {
-	width: 50px;
-	height: 50px;
-}
+
 .navbar .nav-item a.nav-link, #socials a i {
 	color: var(--primary-color) !important;
 }
