--- a/public/css/index.css
+++ b/public/css/index.css
@@ -369,3 +369,15 @@ footer {
 	border: 2px solid #22aa7e;
 }
 
+form {
+	background-color: var(--background-color);
+	width: 80%;
+	max-width: 600px;
+	margin: 20px auto;
+	padding: 40px;
+}
+
+form#submit {
+	margin: 10px auto;
+}
+
